dnl Autoconf configuration script ac3dec
dnl 
dnl Aaron Holtzman - May 1999
dnl
AC_INIT(decode.c)
AC_CANONICAL_HOST
AC_PREREQ(2.13)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(ac3dec, 0.5.0)

AM_MAINTAINER_MODE
AC_PROG_CC
AC_PROG_GCC_TRADITIONAL
AC_PROG_RANLIB

AC_OUTPUT(tools/Makefile test/Makefile Makefile ) 
